removes need for gyroscope